tests/machine/x/zig/math_ops.error
Error on line 0: output mismatch
-- got --
42
3
1
-- want --
42
3.5
1
1: const std = @import("std");
